# SurePet_SmartHome

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: hacs.yml  hassfest.yml  publish-pypi.yml  release-drafter.yml  release.yml  test.yml  wiki.yml
custom_components/surepet_sh/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  image.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  time.py
custom_components/surepet_sh/blueprints/automation/surepet_sh/: emergency_escape.yaml  pet_activity_notification.yaml  vacation_mode.yaml
custom_components/surepet_sh/translations/: en.json
src/surehub/: __init__.py  auth.py  client.py  command.py  const.py  enums.py  exceptions.py
src/surehub/models/: __init__.py  account.py  base.py  device.py  household.py  notification.py  pet.py  report.py
tests/: conftest.py  test_client.py  test_models.py  test_report.py
tests/fixtures/: me_start.json  report.json
wiki/: Configuration.md  Emergency-Unlock.md  Entities.md  FAQ.md  Home.md  Installation.md  Supported-Devices.md  _Sidebar.md
