[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysurehub"
version = "0.1.0"
description = "Async client for the Sure Petcare (SureHub) cloud API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "René Rieck", email = "contact@rieck.gg" }]
keywords = ["surepetcare", "surehub", "homeassistant", "pet"]
dependencies = ["aiohttp>=3.9", "pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aresponses", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/surehub"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "custom_components", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
